Source/JavaScriptCore/runtime/ISO8601.h
@@ -69,6 +69,7 @@ public:
     const_iterator end() const { return m_data.end(); }
     void clear() { m_data.fill(0); }
 
+    template<TemporalUnit unit>
     std::optional<Int128> totalNanoseconds() const;
 
     Duration operator-() const
